<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_explore"
        android:icon="@drawable/ic_explore_black_24dp"
        android:title="@string/explore"/>
    <item
        android:id="@+id/nav_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/search"/>
    <item
        android:id="@+id/nav_history"
        android:icon="@drawable/ic_history_black_24dp"
        android:title="@string/history"/>
    <item
        android:id="@+id/nav_saved"
        android:icon="@drawable/ic_saved_black_24dp"
        android:title="@string/saved"/>
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/settings"/>
</menu>