<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/image_article1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/world_series"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/title_article2"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"/>

    <TextView
        android:id="@+id/title_article1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_article1"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_toEndOf="@+id/image_article1"
        android:layout_alignTop="@+id/image_article1"/>

    <TextView
        android:id="@+id/content_article1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/content_article1"
        android:maxLines="5"
        android:ellipsize="end"
        android:layout_toEndOf="@+id/image_article1"
        android:layout_below="@+id/title_article1"/>


</RelativeLayout>
