<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    tools:layout_editor_absoluteY="81dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_gravity="start|top">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/Log_in"
                android:layout_alignLeft="@+id/Log_in"
                android:layout_alignParentTop="true"
                android:layout_marginTop="25dp"
                android:text="@string/log_in_title"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView"
                android:layout_alignStart="@+id/Log_in"
                android:layout_alignLeft="@+id/Log_in"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="-1dp"
                android:text="@string/dont_have_account"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/join_wikipedia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView"
                android:layout_toEndOf="@+id/textView3"
                android:layout_toRightOf="@id/textView3"
                android:onClick="Create_new_account"
                android:text="@string/join_wiki"
                android:textColor="#0095ff"
                android:textSize="19sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView3"
                android:layout_alignStart="@+id/textView"
                android:layout_alignLeft="@+id/textView"
                android:layout_marginTop="25dp"
                android:text="@string/username"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/username"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView5"
                android:layout_centerHorizontal="true"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/username"
                android:layout_alignStart="@+id/textView"
                android:layout_alignLeft="@+id/textView"
                android:layout_marginTop="15dp"
                android:text="@string/password"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/password"
                android:layout_alignStart="@+id/textView"
                android:layout_alignLeft="@id/textView"
                android:layout_marginTop="15dp"
                android:onClick="Forgot_password"
                android:text="@string/forgot_pass"
                android:textColor="#0095ff"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/Log_in"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/forgot_password"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="25dp"
                android:text="@string/log_in_button" />

            <EditText
                android:id="@+id/password"
                android:layout_width="316dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView7"
                android:layout_centerHorizontal="true"
                android:inputType="textPassword" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>