<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_gravity="start|top" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <EditText
                android:id="@+id/username"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView13"
                android:layout_centerHorizontal="true"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/username"
                android:layout_alignLeft="@+id/username"
                android:layout_alignParentTop="true"
                android:layout_marginTop="25dp"
                android:text="@string/reset_pass_title"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/textView8"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView4"
                android:layout_alignStart="@+id/username"
                android:layout_alignLeft="@+id/username"
                android:text="@string/fill_in"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView8"
                android:layout_alignStart="@+id/textView4"
                android:layout_alignLeft="@+id/textView4"
                android:layout_marginTop="25dp"
                android:text="@string/username"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/username"
                android:layout_alignStart="@+id/username"
                android:layout_alignLeft="@+id/username"
                android:layout_marginTop="5dp"
                android:text="@string/or"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView14"
                android:layout_alignStart="@+id/username"
                android:layout_alignLeft="@+id/username"
                android:layout_marginTop="15dp"
                android:text="@string/email"
                android:textSize="16sp"/>

            <EditText
                android:id="@+id/email"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView15"
                android:layout_centerHorizontal="true"
                android:ems="10"
                android:inputType="textEmailAddress" />

            <Button
                android:id="@+id/reset"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/email"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="25dp"
                android:text="@string/reset_button" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>