<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:focusableInTouchMode="true"
        android:padding="8dp"
        tools:context=".fragment.explore.ExploreFragment">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:background="@color/listItem2">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal"
                    android:padding="2dp">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_marginRight="5dp"
                        android:src="@drawable/w_nav_mark" />

                    <TextView
                        android:id="@+id/title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:fontFamily="serif"
                        android:textSize="40sp"
                        android:text="@string/app_name"
                        android:textColor="@android:color/black"/>
                </LinearLayout>

                <android.support.v7.widget.SearchView
                    android:id="@+id/auto_complete_search"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/white_rounded"
                    app:queryHint="@string/query_hint"
                    app:iconifiedByDefault="false"
                    android:layout_margin="4dp"/>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="4dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/listItem2"
                            android:gravity="start"
                            android:padding="5dp"
                            android:text="@string/today_page"
                            android:fontFamily="serif"
                            android:textColor="@android:color/black"
                            android:textSize="20sp"/>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:orientation="vertical"
                            android:paddingBottom="10dp">


                            <view
                                android:id="@+id/viewpager1"
                                class="com.usth.wikipedia.fragment.explore.WrapContentViewPager"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="4dp"
                                android:clipToPadding="false"
                                android:overScrollMode="never"
                                android:paddingStart="20dp"
                                android:paddingEnd="20dp" />

                        </LinearLayout>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:background="@color/listItem2"
                            android:gravity="start"
                            android:padding="5dp"
                            android:text="@string/yesterday_page"
                            android:fontFamily="serif"
                            android:textColor="@android:color/black"
                            android:textSize="20sp"/>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:orientation="vertical"
                            android:paddingBottom="10dp">


                            <view
                                android:id="@+id/viewpager2"
                                class="com.usth.wikipedia.fragment.explore.WrapContentViewPager"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="4dp"
                                android:clipToPadding="false"
                                android:overScrollMode="never"
                                android:paddingStart="20dp"
                                android:paddingEnd="20dp" />

                        </LinearLayout>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:background="@color/listItem2"
                            android:gravity="start"
                            android:padding="5dp"
                            android:text="@string/random_page"
                            android:fontFamily="serif"
                            android:textColor="@android:color/black"
                            android:textSize="20sp"/>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:paddingBottom="10dp"
                            android:orientation="vertical">


                            <view
                                android:id="@+id/viewpager3"
                                class="com.usth.wikipedia.fragment.explore.WrapContentViewPager"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="4dp"
                                android:clipToPadding="false"
                                android:overScrollMode="never"
                                android:paddingStart="20dp"
                                android:paddingEnd="20dp" />


                        </LinearLayout>
                    </LinearLayout>
            </LinearLayout>

    </LinearLayout>
</ScrollView>
